// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Banners|AlertBanner default 1`] = `
<section
  className="sc-bxivhb eMtVEh"
>
  <div
    className="sc-EHOje jtyqUw"
  >
    <p>
      alert text
      <button
        className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-contained-12 MuiButton-raised-15 sc-ifAKCX bqdATS sc-bdVaJa eKQRDg"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-2 label"
        >
          button text
        </span>
      </button>
    </p>
  </div>
</section>
`;

exports[`Storyshots Banners|ErrorSuccessBanner error 1`] = `
<div
  className="sc-gzVnrw avLPF"
  color="#C1363F"
>
  <div
    className="sc-htoDjs kYYNpa"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-30 root styled-icon sc-VigVT bkqdLp"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    className="sc-iwsKbI dwDcyq"
  >
    error
  </div>
  <button
    className="MuiButtonBase-root-65 MuiButton-root-39 MuiButton-contained-50 MuiButton-raised-53 sc-dnqmqq ibEVtO sc-bdVaJa eKQRDg"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-40 label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-30 root styled-icon sc-gZMcBi fwoZLL"
        focusable="false"
        role="presentation"
        viewBox="0 0 500 500"
      >
        <path
          clipRule="evenodd"
          d="M483 456.3L275.7 249 483 41.7 456.3 15 249 222.3 41.7 15 15 41.7 222.3 249 15 456.3 41.7 483 249 275.7 456.3 483z"
          fillRule="evenodd"
        />
      </svg>
      
    </span>
  </button>
</div>
`;

exports[`Storyshots Banners|ErrorSuccessBanner success 1`] = `
<div
  className="sc-gzVnrw dHKoqK"
  color="#5DBA9C"
>
  <div
    className="sc-htoDjs kYYNpa"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-68 root styled-icon sc-gqjmRU kVDmhf"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0V0zm0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M16.59 7.58L10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-iwsKbI dwDcyq"
  >
    success
  </div>
  <button
    className="MuiButtonBase-root-103 MuiButton-root-77 MuiButton-contained-88 MuiButton-raised-91 sc-dnqmqq ibEVtO sc-bdVaJa eKQRDg"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-78 label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-68 root styled-icon sc-gZMcBi fwoZLL"
        focusable="false"
        role="presentation"
        viewBox="0 0 500 500"
      >
        <path
          clipRule="evenodd"
          d="M483 456.3L275.7 249 483 41.7 456.3 15 249 222.3 41.7 15 15 41.7 222.3 249 15 456.3 41.7 483 249 275.7 456.3 483z"
          fillRule="evenodd"
        />
      </svg>
      
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons|BaseButton default 1`] = `
<button
  className="MuiButtonBase-root-132 MuiButton-root-106 MuiButton-contained-117 MuiButton-raised-120 sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-107 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-135 root styled-icon sc-fAjcbJ kYqIkB"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|FlatIconButton default 1`] = `
<button
  aria-describedby={null}
  className="MuiButtonBase-root-178 MuiButton-root-152 MuiButton-contained-163 MuiButton-raised-166 sc-bZQynM jlZJzO sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  title="tooltip text"
  type="button"
>
  <span
    className="MuiButton-label-153 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-181 root styled-icon sc-caSCKo gctkdB"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|GhostButton default 1`] = `
<button
  className="MuiButtonBase-root-216 MuiButton-root-190 MuiButton-contained-201 MuiButton-raised-204 sc-jzJRlG hTvvkz sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-191 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-219 root styled-icon sc-gisBJw hFUNto"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|IconButton default 1`] = `
<button
  className="MuiButtonBase-root-234 MuiIconButton-root-228"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiIconButton-label-233"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-237 root styled-icon sc-kjoXOD fRZQKW"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
  </span>
  <span
    className="MuiTouchRipple-root-246"
  />
</button>
`;

exports[`Storyshots Buttons|IconButton disabled 1`] = `
<button
  className="MuiButtonBase-root-259 MuiButtonBase-disabled-260 MuiIconButton-root-253 MuiIconButton-disabled-257"
  disabled={true}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="-1"
  type="button"
>
  <span
    className="MuiIconButton-label-258"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-262 root styled-icon sc-cHGsZl gxqzKH"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`Storyshots Buttons|PrimaryButton default 1`] = `
<button
  className="MuiButtonBase-root-297 MuiButton-root-271 MuiButton-contained-282 MuiButton-raised-285 sc-jTzLTM lcwPIJ sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-272 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-300 root styled-icon sc-TOsTZ gVXScp"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|SecondaryButton default 1`] = `
<button
  className="MuiButtonBase-root-335 MuiButton-root-309 MuiButton-contained-320 MuiButton-raised-323 sc-fjdhpX dQkZpA sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-310 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-338 root styled-icon sc-kgAjT gFDGQC"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|TextButton default 1`] = `
<button
  className="MuiButtonBase-root-373 MuiButton-root-347 MuiButton-contained-358 MuiButton-raised-361 sc-htpNat fzSZoe sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-348 label"
  >
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|TooltipButton default 1`] = `
<button
  aria-describedby={null}
  className="MuiButtonBase-root-410 MuiButton-root-384 MuiButton-contained-395 MuiButton-raised-398 sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  title="tooltip text"
  type="button"
>
  <span
    className="MuiButton-label-385 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-413 root styled-icon sc-cJSrbW dpuWZO"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Cards|BaseCard default 1`] = `
<div
  className="MuiPaper-root-423 MuiPaper-elevation1-426 MuiPaper-rounded-424 MuiCard-root-422 card sc-cSHVUG dvYpwr"
  color="#310078"
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    card text
  </div>
</div>
`;

exports[`Storyshots Cards|BaseCard image 1`] = `
<div
  className="MuiPaper-root-479 MuiPaper-elevation1-482 MuiPaper-rounded-480 MuiCard-root-478 card sc-cSHVUG dvYpwr"
  color="#310078"
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-506 root styled-icon sc-chPdSV kAENMX"
      focusable="false"
      role="presentation"
      viewBox="0 0 315.58 315.58"
    >
      <path
        d="M310.58,33.331H5c-2.761,0-5,2.238-5,5v238.918c0,2.762,2.239,5,5,5h305.58c2.763,0,5-2.238,5-5V38.331 C315.58,35.569,313.343,33.331,310.58,33.331z M285.58,242.386l-68.766-71.214c-0.76-0.785-2.003-0.836-2.823-0.114l-47.695,41.979 l-60.962-75.061c-0.396-0.49-0.975-0.77-1.63-0.756c-0.631,0.013-1.22,0.316-1.597,0.822L30,234.797V63.331h255.58V242.386z"
      />
      <path
        d="M210.059,135.555c13.538,0,24.529-10.982,24.529-24.531c0-13.545-10.991-24.533-24.529-24.533 c-13.549,0-24.528,10.988-24.528,24.533C185.531,124.572,196.511,135.555,210.059,135.555z"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Cards|BaseCard title 1`] = `
<div
  className="MuiPaper-root-451 MuiPaper-elevation1-454 MuiPaper-rounded-452 MuiCard-root-450 card sc-cSHVUG dvYpwr"
  color="#310078"
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    <h1
      className="sc-kAzzGY dFlnQs"
    >
      card text
    </h1>
  </div>
</div>
`;

exports[`Storyshots Checkbox|Checkbox default 1`] = `
<span
  className="MuiButtonBase-root-531 MuiIconButton-root-525 MuiPrivateSwitchBase-root-521 MuiCheckbox-root-515 MuiPrivateSwitchBase-checked-522 MuiCheckbox-checked-516"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <span
    className="MuiIconButton-label-530"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-534"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
    <input
      checked={true}
      className="MuiPrivateSwitchBase-input-524"
      data-indeterminate={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
      value="value"
    />
  </span>
  <span
    className="MuiTouchRipple-root-543"
  />
</span>
`;

exports[`Storyshots Checkbox|Checkbox disabled 1`] = `
<span
  className="MuiButtonBase-root-601 MuiButtonBase-disabled-602 MuiIconButton-root-595 MuiIconButton-disabled-599 MuiPrivateSwitchBase-root-591 MuiCheckbox-root-585 MuiCheckbox-colorSecondary-590 MuiPrivateSwitchBase-disabled-593 MuiCheckbox-disabled-587"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="-1"
>
  <span
    className="MuiIconButton-label-600"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-604"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
      />
    </svg>
    <input
      checked={false}
      className="MuiPrivateSwitchBase-input-594"
      data-indeterminate={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
      value="value"
    />
  </span>
</span>
`;

exports[`Storyshots Checkbox|Checkbox unchecked 1`] = `
<span
  className="MuiButtonBase-root-566 MuiIconButton-root-560 MuiPrivateSwitchBase-root-556 MuiCheckbox-root-550 MuiCheckbox-colorSecondary-555"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <span
    className="MuiIconButton-label-565"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-569"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
      />
    </svg>
    <input
      checked={false}
      className="MuiPrivateSwitchBase-input-559"
      data-indeterminate={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
      value="value"
    />
  </span>
  <span
    className="MuiTouchRipple-root-578"
  />
</span>
`;

exports[`Storyshots ExpansionPanel|ExpansionPanel default 1`] = `
<div
  className="MuiPaper-root-617 MuiPaper-elevation1-620 MuiExpansionPanel-root-613 sc-kgoBCf ijUpCD"
>
  <div
    aria-expanded={false}
    className="MuiButtonBase-root-650 MuiExpansionPanelSummary-root-644"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-648"
    >
      <p
        className="MuiTypography-root-653 MuiTypography-body2-661"
        style={
          Object {
            "flexBasis": "33.33%",
            "flexShrink": 0,
            "fontSize": "1.6rem",
          }
        }
      >
        Expansion Panel
      </p>
    </div>
    <div
      aria-hidden="true"
      className="MuiButtonBase-root-650 MuiIconButton-root-689 MuiExpansionPanelSummary-expandIcon-649"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-694"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-695 root styled-icon sc-ksYbfQ hUJVwx"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-709"
      />
    </div>
  </div>
  <div
    aria-hidden="true"
    className="MuiCollapse-container-704 collapse-container"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-706"
    >
      <div
        className="MuiCollapse-wrapperInner-707"
      >
        <div
          className="MuiExpansionPanelDetails-root-708"
        >
          <p
            className="MuiTypography-root-653 MuiTypography-body2-661"
            style={
              Object {
                "fontSize": "1.6rem",
              }
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Suspendisse malesuada lacus ex, sit amet blandit leo lobortis
eget.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ExpansionPanel|ExpansionPanel disabled 1`] = `
<div
  className="MuiPaper-root-926 MuiPaper-elevation1-929 MuiExpansionPanel-root-922 MuiExpansionPanel-disabled-925 sc-kgoBCf ijUpCD"
>
  <div
    aria-expanded={false}
    className="MuiButtonBase-root-959 MuiButtonBase-disabled-960 MuiExpansionPanelSummary-root-953 MuiExpansionPanelSummary-disabled-956"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="MuiExpansionPanelSummary-content-957"
    >
      <p
        className="MuiTypography-root-962 MuiTypography-body2-970"
        style={
          Object {
            "flexBasis": "33.33%",
            "flexShrink": 0,
            "fontSize": "1.6rem",
          }
        }
      >
        Expansion Panel
      </p>
    </div>
    <div
      aria-hidden="true"
      className="MuiButtonBase-root-959 MuiButtonBase-disabled-960 MuiIconButton-root-998 MuiIconButton-disabled-1002 MuiExpansionPanelSummary-expandIcon-958"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="-1"
    >
      <span
        className="MuiIconButton-label-1003"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-1004 root styled-icon sc-kvZOFW befSAg"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    aria-hidden="true"
    className="MuiCollapse-container-1013 collapse-container"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-1015"
    >
      <div
        className="MuiCollapse-wrapperInner-1016"
      >
        <div
          className="MuiExpansionPanelDetails-root-1017"
        >
          <p
            className="MuiTypography-root-962 MuiTypography-body2-970"
            style={
              Object {
                "fontSize": "1.6rem",
              }
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Suspendisse malesuada lacus ex, sit amet blandit leo lobortis
eget.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ExpansionPanel|ExpansionPanel expanded 1`] = `
<div
  className="MuiPaper-root-823 MuiPaper-elevation1-826 MuiExpansionPanel-root-819 MuiExpansionPanel-expanded-821 expanded sc-kgoBCf ijUpCD"
>
  <div
    aria-expanded={true}
    className="MuiButtonBase-root-856 MuiExpansionPanelSummary-root-850 MuiExpansionPanelSummary-expanded-851"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-854 MuiExpansionPanelSummary-expanded-851"
    >
      <p
        className="MuiTypography-root-859 MuiTypography-body2-867"
        style={
          Object {
            "flexBasis": "33.33%",
            "flexShrink": 0,
            "fontSize": "1.6rem",
          }
        }
      >
        Expansion Panel
      </p>
    </div>
    <div
      aria-hidden="true"
      className="MuiButtonBase-root-856 MuiIconButton-root-895 MuiExpansionPanelSummary-expandIcon-855 MuiExpansionPanelSummary-expanded-851"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-900"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-901 root styled-icon sc-frDJqD fhgvWV"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-915"
      />
    </div>
  </div>
  <div
    className="MuiCollapse-container-910 collapse-container MuiCollapse-entered-911"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-912"
    >
      <div
        className="MuiCollapse-wrapperInner-913"
      >
        <div
          className="MuiExpansionPanelDetails-root-914"
        >
          <p
            className="MuiTypography-root-859 MuiTypography-body2-867"
            style={
              Object {
                "fontSize": "1.6rem",
              }
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Suspendisse malesuada lacus ex, sit amet blandit leo lobortis
eget.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ExpansionPanel|ExpansionPanel no expand icon 1`] = `
<div
  className="MuiPaper-root-1022 MuiPaper-elevation1-1025 MuiExpansionPanel-root-1018 sc-kgoBCf ijUpCD"
>
  <div
    aria-expanded={false}
    className="MuiButtonBase-root-1055 MuiExpansionPanelSummary-root-1049"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "flexBasis": "33.33%",
        "flexShrink": 0,
        "fontSize": "1.6rem",
      }
    }
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-1053"
    >
      <p
        className="MuiTypography-root-1058 MuiTypography-body2-1066"
        style={
          Object {
            "flexBasis": "33.33%",
            "flexShrink": 0,
            "fontSize": "1.6rem",
          }
        }
      >
        Expansion Panel
      </p>
    </div>
  </div>
  <div
    aria-hidden="true"
    className="MuiCollapse-container-1094 collapse-container"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-1096"
    >
      <div
        className="MuiCollapse-wrapperInner-1097"
      >
        <div
          className="MuiExpansionPanelDetails-root-1098"
        >
          <p
            className="MuiTypography-root-1058 MuiTypography-body2-1066"
            style={
              Object {
                "fontSize": "1.6rem",
              }
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Suspendisse malesuada lacus ex, sit amet blandit leo lobortis
eget.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ExpansionPanel|ExpansionPanel secondary text 1`] = `
<div
  className="MuiPaper-root-720 MuiPaper-elevation1-723 MuiExpansionPanel-root-716 sc-kgoBCf ijUpCD"
>
  <div
    aria-expanded={false}
    className="MuiButtonBase-root-753 MuiExpansionPanelSummary-root-747"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-751"
    >
      <p
        className="MuiTypography-root-756 MuiTypography-body2-764"
        style={
          Object {
            "flexBasis": "33.33%",
            "flexShrink": 0,
            "fontSize": "1.6rem",
          }
        }
      >
        Expansion Panel
      </p>
      <p
        className="MuiTypography-root-756 MuiTypography-body2-764"
        style={
          Object {
            "color": "#777",
            "fontSize": "1.6rem",
          }
        }
      >
        Lorem ipsum dolor sit amet consectetur
      </p>
    </div>
    <div
      aria-hidden="true"
      className="MuiButtonBase-root-753 MuiIconButton-root-792 MuiExpansionPanelSummary-expandIcon-752"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-797"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-798 root styled-icon sc-hmzhuo cJgIbY"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-812"
      />
    </div>
  </div>
  <div
    aria-hidden="true"
    className="MuiCollapse-container-807 collapse-container"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-809"
    >
      <div
        className="MuiCollapse-wrapperInner-810"
      >
        <div
          className="MuiExpansionPanelDetails-root-811"
        >
          <p
            className="MuiTypography-root-756 MuiTypography-body2-764"
            style={
              Object {
                "fontSize": "1.6rem",
              }
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Suspendisse malesuada lacus ex, sit amet blandit leo lobortis
eget.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Headings|H1 default 1`] = `
<h1
  className="sc-kGXeez iPlqu"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H1 HEADER TEXT
</h1>
`;

exports[`Storyshots Headings|H2 default 1`] = `
<h2
  className="sc-kpOJdX dptQyK"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H2 HEADER TEXT
</h2>
`;

exports[`Storyshots Headings|H3 default 1`] = `
<h3
  className="sc-dxgOiQ begXls"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H3 HEADER TEXT
</h3>
`;

exports[`Storyshots Icons|TooltipIcon content 1`] = `
<svg
  aria-describedby={null}
  aria-hidden="true"
  className="MuiSvgIcon-root-1124 root sc-ckVGcZ jyyGS styled-icon sc-jbKcbu jndHjb"
  focusable="false"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  role="presentation"
  title={null}
  viewBox="0 0 24 24"
>
  <path
    d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
  />
  <path
    d="M0 0h24v24H0V0z"
    fill="none"
  />
</svg>
`;

exports[`Storyshots Icons|TooltipIcon default 1`] = `
<svg
  aria-describedby={null}
  aria-hidden="true"
  className="MuiSvgIcon-root-1107 root sc-ckVGcZ jyyGS styled-icon sc-hqyNC hjRIiO"
  focusable="false"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  role="presentation"
  title={null}
  viewBox="0 0 24 24"
>
  <path
    d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
  />
  <path
    d="M0 0h24v24H0V0z"
    fill="none"
  />
</svg>
`;

exports[`Storyshots Inputs|CurrencyInput default 1`] = `
<div
  className="MuiFormControl-root-1133 root MuiFormControl-marginNormal-1134 sc-kkGfuU hCjPhk sc-kEYyzF izjxSX"
>
  <div
    className="MuiInputBase-root-1150 MuiOutlinedInput-root-1137 base-input MuiInputBase-formControl-1151 MuiInputBase-adornedStart-1154 MuiOutlinedInput-adornedStart-1140"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1167 MuiOutlinedInput-notchedOutline-1144 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1168"
        style={
          Object {
            "width": 0,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <div
      className="MuiInputAdornment-root-1169 MuiInputAdornment-positionStart-1171"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-1174 root styled-icon sc-iAyFgw dELekT"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1160 MuiOutlinedInput-input-1145 input MuiInputBase-inputType-1163 MuiInputBase-inputAdornedStart-1165 MuiOutlinedInput-inputAdornedStart-1148"
      disabled={false}
      min={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="0.00"
      required={false}
      type="number"
      value={null}
    />
  </div>
</div>
`;

exports[`Storyshots Inputs|CurrencyInput helper text 1`] = `
<div
  className="MuiFormControl-root-1183 root MuiFormControl-marginNormal-1184 sc-kkGfuU hCjPhk sc-kEYyzF izjxSX"
>
  <div
    className="MuiInputBase-root-1200 MuiOutlinedInput-root-1187 base-input MuiInputBase-formControl-1201 MuiInputBase-adornedStart-1204 MuiOutlinedInput-adornedStart-1190"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1217 MuiOutlinedInput-notchedOutline-1194 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1218"
        style={
          Object {
            "width": 0,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <div
      className="MuiInputAdornment-root-1219 MuiInputAdornment-positionStart-1221"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-1224 root styled-icon sc-iAyFgw dELekT"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1210 MuiOutlinedInput-input-1195 input MuiInputBase-inputType-1213 MuiInputBase-inputAdornedStart-1215 MuiOutlinedInput-inputAdornedStart-1198"
      disabled={false}
      min={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="0.00"
      required={false}
      type="number"
      value={null}
    />
  </div>
  <p
    className="MuiFormHelperText-root-1233 helper MuiFormHelperText-contained-1237"
  >
    helper text
  </p>
</div>
`;

exports[`Storyshots Inputs|CurrencyInput label 1`] = `
Array [
  <div
    className="sc-kkGfuU hCjPhk sc-jKJlTe ifWaak"
  >
    <span>
      label text
    </span>
  </div>,
  <div
    className="MuiFormControl-root-1241 root MuiFormControl-marginNormal-1242 sc-kkGfuU hCjPhk sc-kEYyzF izjxSX"
  >
    <div
      className="MuiInputBase-root-1258 MuiOutlinedInput-root-1245 base-input MuiInputBase-formControl-1259 MuiInputBase-adornedStart-1262 MuiOutlinedInput-adornedStart-1248"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-1275 MuiOutlinedInput-notchedOutline-1252 outline"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-1276"
          style={
            Object {
              "width": 0,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <div
        className="MuiInputAdornment-root-1277 MuiInputAdornment-positionStart-1279"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-1282 root styled-icon sc-iAyFgw dELekT"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-1268 MuiOutlinedInput-input-1253 input MuiInputBase-inputType-1271 MuiInputBase-inputAdornedStart-1273 MuiOutlinedInput-inputAdornedStart-1256"
        disabled={false}
        min={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="0.00"
        required={false}
        type="number"
        value={null}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Inputs|NumberInput default 1`] = `
<div
  className="MuiFormControl-root-1291 root MuiFormControl-marginNormal-1292 sc-hSdWYo krvaYm sc-kEYyzF izjxSX"
>
  <div
    className="MuiInputBase-root-1308 MuiOutlinedInput-root-1295 base-input MuiInputBase-formControl-1309"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1325 MuiOutlinedInput-notchedOutline-1302 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1326"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1318 MuiOutlinedInput-input-1303 input MuiInputBase-inputType-1321"
      disabled={false}
      min={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="123"
      required={false}
      type="number"
      value={null}
    />
  </div>
</div>
`;

exports[`Storyshots Inputs|NumberInput helper text 1`] = `
<div
  className="MuiFormControl-root-1327 root MuiFormControl-marginNormal-1328 sc-hSdWYo krvaYm sc-kEYyzF izjxSX"
>
  <div
    className="MuiInputBase-root-1344 MuiOutlinedInput-root-1331 base-input MuiInputBase-formControl-1345"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1361 MuiOutlinedInput-notchedOutline-1338 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1362"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1354 MuiOutlinedInput-input-1339 input MuiInputBase-inputType-1357"
      disabled={false}
      min={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="123"
      required={false}
      type="number"
      value={null}
    />
  </div>
  <p
    className="MuiFormHelperText-root-1363 helper MuiFormHelperText-contained-1367"
  >
    helper text
  </p>
</div>
`;

exports[`Storyshots Inputs|NumberInput label 1`] = `
Array [
  <div
    className="sc-hSdWYo krvaYm sc-jKJlTe ifWaak"
  >
    <span>
      label text
    </span>
  </div>,
  <div
    className="MuiFormControl-root-1371 root MuiFormControl-marginNormal-1372 sc-hSdWYo krvaYm sc-kEYyzF izjxSX"
  >
    <div
      className="MuiInputBase-root-1388 MuiOutlinedInput-root-1375 base-input MuiInputBase-formControl-1389"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-1405 MuiOutlinedInput-notchedOutline-1382 outline"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-1406"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-1398 MuiOutlinedInput-input-1383 input MuiInputBase-inputType-1401"
        disabled={false}
        min={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="123"
        required={false}
        type="number"
        value={null}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Inputs|PasswordInput default 1`] = `
<div
  className="MuiFormControl-root-1407 formControl MuiFormControl-marginNormal-1408 sc-kEYyzF izjxSX"
>
  <div
    className="MuiInputBase-root-1424 MuiOutlinedInput-root-1411 base-input MuiInputBase-formControl-1425 MuiInputBase-adornedEnd-1429 MuiOutlinedInput-adornedEnd-1415"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1441 MuiOutlinedInput-notchedOutline-1418 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1442"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1434 MuiOutlinedInput-input-1419 input MuiInputBase-inputType-1437 MuiInputBase-inputAdornedEnd-1440 MuiOutlinedInput-inputAdornedEnd-1423"
      disabled={false}
      min={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="placeholder"
      required={false}
      type="password"
      value={null}
    />
    <div
      className="MuiInputAdornment-root-1443 MuiInputAdornment-positionEnd-1446"
    >
      <div
        className="MuiInputAdornment-root-1443 MuiInputAdornment-positionEnd-1446"
      >
        <button
          aria-label="Toggle Password Visibility"
          className="MuiButtonBase-root-1454 MuiIconButton-root-1448 sc-eHgmQL cQYBDa"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-1453"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-1457 root styled-icon sc-jWBwVP hVaZHp"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-1466"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inputs|PasswordInput helper text 1`] = `
<div
  className="MuiFormControl-root-1473 formControl MuiFormControl-marginNormal-1474 sc-kEYyzF izjxSX"
>
  <div
    className="MuiInputBase-root-1490 MuiOutlinedInput-root-1477 base-input MuiInputBase-formControl-1491 MuiInputBase-adornedEnd-1495 MuiOutlinedInput-adornedEnd-1481"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1507 MuiOutlinedInput-notchedOutline-1484 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1508"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1500 MuiOutlinedInput-input-1485 input MuiInputBase-inputType-1503 MuiInputBase-inputAdornedEnd-1506 MuiOutlinedInput-inputAdornedEnd-1489"
      disabled={false}
      min={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="placeholder"
      required={false}
      type="password"
      value={null}
    />
    <div
      className="MuiInputAdornment-root-1509 MuiInputAdornment-positionEnd-1512"
    >
      <div
        className="MuiInputAdornment-root-1509 MuiInputAdornment-positionEnd-1512"
      >
        <button
          aria-label="Toggle Password Visibility"
          className="MuiButtonBase-root-1520 MuiIconButton-root-1514 sc-eHgmQL cQYBDa"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-1519"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-1523 root styled-icon sc-jWBwVP hVaZHp"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-1540"
          />
        </button>
      </div>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-1532 helper MuiFormHelperText-contained-1536"
  >
    helper text
  </p>
</div>
`;

exports[`Storyshots Inputs|PasswordInput label 1`] = `
Array [
  <div
    className="sc-jKJlTe ifWaak"
  >
    <span>
      label text
    </span>
  </div>,
  <div
    className="MuiFormControl-root-1547 formControl MuiFormControl-marginNormal-1548 sc-kEYyzF izjxSX"
  >
    <div
      className="MuiInputBase-root-1564 MuiOutlinedInput-root-1551 base-input MuiInputBase-formControl-1565 MuiInputBase-adornedEnd-1569 MuiOutlinedInput-adornedEnd-1555"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-1581 MuiOutlinedInput-notchedOutline-1558 outline"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-1582"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-1574 MuiOutlinedInput-input-1559 input MuiInputBase-inputType-1577 MuiInputBase-inputAdornedEnd-1580 MuiOutlinedInput-inputAdornedEnd-1563"
        disabled={false}
        min={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="placeholder"
        required={false}
        type="password"
        value={null}
      />
      <div
        className="MuiInputAdornment-root-1583 MuiInputAdornment-positionEnd-1586"
      >
        <div
          className="MuiInputAdornment-root-1583 MuiInputAdornment-positionEnd-1586"
        >
          <button
            aria-label="Toggle Password Visibility"
            className="MuiButtonBase-root-1594 MuiIconButton-root-1588 sc-eHgmQL cQYBDa"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-1593"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-1597 root styled-icon sc-jWBwVP hVaZHp"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-1606"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Inputs|TextInput default 1`] = `
<div
  className="MuiFormControl-root-1613 formControl MuiFormControl-marginNormal-1614 sc-kEYyzF izjxSX"
>
  <div
    className="MuiInputBase-root-1630 MuiOutlinedInput-root-1617 base-input MuiInputBase-formControl-1631"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1647 MuiOutlinedInput-notchedOutline-1624 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1648"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1640 MuiOutlinedInput-input-1625 input"
      disabled={false}
      min={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="placeholder text"
      required={false}
      type="text"
      value={null}
    />
  </div>
</div>
`;

exports[`Storyshots Inputs|TextInput helper text 1`] = `
<div
  className="MuiFormControl-root-1649 formControl MuiFormControl-marginNormal-1650 sc-kEYyzF izjxSX"
>
  <div
    className="MuiInputBase-root-1666 MuiOutlinedInput-root-1653 base-input MuiInputBase-formControl-1667"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1683 MuiOutlinedInput-notchedOutline-1660 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1684"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1676 MuiOutlinedInput-input-1661 input"
      disabled={false}
      min={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="placeholder text"
      required={false}
      type="text"
      value={null}
    />
  </div>
  <p
    className="MuiFormHelperText-root-1685 helper MuiFormHelperText-contained-1689"
  >
    helper text
  </p>
</div>
`;

exports[`Storyshots Inputs|TextInput label 1`] = `
Array [
  <div
    className="sc-jKJlTe ifWaak"
  >
    <span>
      label text
    </span>
  </div>,
  <div
    className="MuiFormControl-root-1693 formControl MuiFormControl-marginNormal-1694 sc-kEYyzF izjxSX"
  >
    <div
      className="MuiInputBase-root-1710 MuiOutlinedInput-root-1697 base-input MuiInputBase-formControl-1711"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-1727 MuiOutlinedInput-notchedOutline-1704 outline"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-1728"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-1720 MuiOutlinedInput-input-1705 input"
        disabled={false}
        min={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="placeholder text"
        required={false}
        type="text"
        value={null}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Links|BaseLink default 1`] = `
<a
  className="sc-brqgnP cxxUmL"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  LABEL TEXT
</a>
`;

exports[`Storyshots Links|BaseLink icon 1`] = `
<a
  className="sc-brqgnP cxxUmL"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-1729 root styled-icon sc-dNLxif kFfzKz"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
  LABEL TEXT
</a>
`;

exports[`Storyshots Links|GhostButtonLink default 1`] = `
<a
  className="sc-cMljjf bvtVec sc-brqgnP cxxUmL"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  LABEL TEXT
</a>
`;

exports[`Storyshots Links|GhostButtonLink icon 1`] = `
<a
  className="sc-cMljjf bvtVec sc-brqgnP cxxUmL"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-1738 root styled-icon sc-jqCOkK gsYcDN"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
  LABEL TEXT
</a>
`;

exports[`Storyshots List Items|ListItem button 1`] = `
<div
  className="MuiButtonBase-root-1813 MuiListItem-root-1801 MuiListItem-default-1804 MuiListItem-gutters-1809 MuiListItem-button-1810"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="MuiListItemText-root-1816 item-text"
  >
    <span
      className="MuiTypography-root-1822 MuiTypography-body1-1831 MuiListItemText-primary-1819"
    >
      List Item Text
    </span>
  </div>
  <span
    className="MuiTouchRipple-root-1858"
  />
</div>
`;

exports[`Storyshots List Items|ListItem default 1`] = `
<li
  className="MuiListItem-root-1747 MuiListItem-default-1750 MuiListItem-gutters-1755"
  disabled={false}
>
  <div
    className="MuiListItemText-root-1759 item-text"
  >
    <span
      className="MuiTypography-root-1765 MuiTypography-body1-1774 MuiListItemText-primary-1762"
    >
      List Item Text
    </span>
  </div>
</li>
`;

exports[`Storyshots List Items|ListItem disabled 1`] = `
<li
  className="MuiListItem-root-1865 MuiListItem-default-1868 MuiListItem-gutters-1873 MuiListItem-disabled-1871"
  disabled={true}
>
  <div
    className="MuiListItemText-root-1877 item-text"
  >
    <span
      className="MuiTypography-root-1883 MuiTypography-body1-1892 MuiListItemText-primary-1880"
    >
      List Item Text
    </span>
  </div>
</li>
`;

exports[`Storyshots List Items|ListItem icon 1`] = `
<li
  className="MuiListItem-root-1919 MuiListItem-default-1922 MuiListItem-gutters-1927"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="MuiListItemText-root-1931 item-text"
  >
    <span
      className="MuiTypography-root-1937 MuiTypography-body1-1946 MuiListItemText-primary-1934"
    >
      List Item Text
    </span>
  </div>
  <div
    className="MuiListItemIcon-root-1973"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-1974 root styled-icon sc-uJMKN jzqTSU"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </div>
</li>
`;

exports[`Storyshots List Items|ListItem selected 1`] = `
<li
  className="MuiListItem-root-1983 MuiListItem-default-1986 MuiListItem-gutters-1991 MuiListItem-selected-1994"
  disabled={false}
>
  <div
    className="MuiListItemText-root-1995 item-text"
  >
    <span
      className="MuiTypography-root-2001 MuiTypography-body1-2010 MuiListItemText-primary-1998"
    >
      List Item Text
    </span>
  </div>
</li>
`;

exports[`Storyshots Loading Indicators|LoadingIndicator default 1`] = `
<div
  className="sc-jAaTju hNkvyk"
>
  <section
    className="sc-iRbamj ezqtr"
  >
    <div
      className="sc-bbmXgH lpngoW"
    />
    <div
      className="sc-gGBfsJ fwhtk"
    />
    <div
      className="sc-jnlKLf kxziOz"
    />
    <div
      className="sc-fYxtnH choODs"
    />
    <div
      className="sc-tilXH bCgemY"
    />
    <div
      className="sc-hEsumM dMDcjx"
    />
    <div
      className="sc-ktHwxA gZOpPC"
    />
    <div
      className="sc-cIShpX jLkOyY"
    />
    <div
      className="sc-kafWEX fTpGyz"
    />
    <div
      className="sc-feJyhm jFmaAu"
    />
    <div
      className="sc-iELTvK chJLLd"
    />
    <div
      className="sc-cmTdod fduDCO"
    />
  </section>
</div>
`;

exports[`Storyshots Loading Indicators|SmallLoadingIndicator default 1`] = `
<span
  className="sc-jDwBTQ iCFKoW"
>
  <span
    className="sc-gPEVay cETrJG"
  >
    <div
      className="sc-jwKygS fehWkL"
    />
    <div
      className="sc-btzYZH jvJegA"
    />
    <div
      className="sc-lhVmIH ktrten"
    />
    <div
      className="sc-bYSBpT dydczK"
    />
    <div
      className="sc-elJkPf jcOnrG"
    />
    <div
      className="sc-jtRfpW izpUSz"
    />
    <div
      className="sc-kTUwUJ hxbXBu"
    />
    <div
      className="sc-dqBHgY fBDcyA"
    />
    <div
      className="sc-gxMtzJ jelUaS"
    />
    <div
      className="sc-dfVpRl kAQREZ"
    />
    <div
      className="sc-gzOgki bAsFgd"
    />
    <div
      className="sc-iyvyFf brKOMM"
    />
  </span>
</span>
`;

exports[`Storyshots Paper|BasePaper default 1`] = `
<div
  className="MuiPaper-root-2037 MuiPaper-elevation2-2041 MuiPaper-rounded-2038 sc-jlyJG hespAE"
>
  <div
    style={
      Object {
        "padding": "2rem",
      }
    }
  >
    paper text
  </div>
</div>
`;

exports[`Storyshots Paper|BasePaper image 1`] = `
<div
  className="MuiPaper-root-2064 MuiPaper-elevation2-2068 MuiPaper-rounded-2065 sc-jlyJG hespAE"
>
  <div
    style={
      Object {
        "padding": "2rem",
      }
    }
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-2091 root styled-icon sc-gipzik jqVxao"
      focusable="false"
      role="presentation"
      viewBox="0 0 315.58 315.58"
    >
      <path
        d="M310.58,33.331H5c-2.761,0-5,2.238-5,5v238.918c0,2.762,2.239,5,5,5h305.58c2.763,0,5-2.238,5-5V38.331 C315.58,35.569,313.343,33.331,310.58,33.331z M285.58,242.386l-68.766-71.214c-0.76-0.785-2.003-0.836-2.823-0.114l-47.695,41.979 l-60.962-75.061c-0.396-0.49-0.975-0.77-1.63-0.756c-0.631,0.013-1.22,0.316-1.597,0.822L30,234.797V63.331h255.58V242.386z"
      />
      <path
        d="M210.059,135.555c13.538,0,24.529-10.982,24.529-24.531c0-13.545-10.991-24.533-24.529-24.533 c-13.549,0-24.528,10.988-24.528,24.533C185.531,124.572,196.511,135.555,210.059,135.555z"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Paper|InsetPaper default 1`] = `
<div
  className="MuiPaper-root-2100 MuiPaper-elevation2-2104 MuiPaper-rounded-2101 sc-csuQGl grBpPP sc-jlyJG hespAE"
>
  <div
    style={
      Object {
        "padding": "2rem",
      }
    }
  >
    paper text
  </div>
</div>
`;

exports[`Storyshots Paper|InsetPaper image 1`] = `
<div
  className="MuiPaper-root-2127 MuiPaper-elevation2-2131 MuiPaper-rounded-2128 sc-csuQGl grBpPP sc-jlyJG hespAE"
>
  <div
    style={
      Object {
        "padding": "2rem",
      }
    }
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-2154 root styled-icon sc-Rmtcm eRFMGT"
      focusable="false"
      role="presentation"
      viewBox="0 0 315.58 315.58"
    >
      <path
        d="M310.58,33.331H5c-2.761,0-5,2.238-5,5v238.918c0,2.762,2.239,5,5,5h305.58c2.763,0,5-2.238,5-5V38.331 C315.58,35.569,313.343,33.331,310.58,33.331z M285.58,242.386l-68.766-71.214c-0.76-0.785-2.003-0.836-2.823-0.114l-47.695,41.979 l-60.962-75.061c-0.396-0.49-0.975-0.77-1.63-0.756c-0.631,0.013-1.22,0.316-1.597,0.822L30,234.797V63.331h255.58V242.386z"
      />
      <path
        d="M210.059,135.555c13.538,0,24.529-10.982,24.529-24.531c0-13.545-10.991-24.533-24.529-24.533 c-13.549,0-24.528,10.988-24.528,24.533C185.531,124.572,196.511,135.555,210.059,135.555z"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Radio|RadioButtonGroup default 1`] = `
<div
  className="MuiFormControl-root-2163 form"
  disableRipple={false}
  labelPlacement="end"
>
  <div
    className="MuiFormGroup-root-2167 group"
    disableRipple={false}
    labelPlacement="end"
    role="radiogroup"
  >
    <label
      className="MuiFormControlLabel-root-2169 sc-bRBYWo jzEXkX"
      disableRipple={false}
    >
      <span
        className="MuiButtonBase-root-2190 MuiIconButton-root-2184 MuiPrivateSwitchBase-root-2180 MuiRadio-root-2175 radio MuiRadio-colorSecondary-2179 sc-hzDkRC iXLrck"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-2189"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-2193"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-2183"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="label-text-1"
          />
        </span>
        <span
          className="MuiTouchRipple-root-2238"
        />
      </span>
      <span
        className="MuiTypography-root-2202 MuiTypography-body2-2210 MuiFormControlLabel-label-2174 label"
      >
        LABEL TEXT
      </span>
    </label>
    <label
      className="MuiFormControlLabel-root-2169 sc-bRBYWo jzEXkX"
      disableRipple={false}
    >
      <span
        className="MuiButtonBase-root-2190 MuiIconButton-root-2184 MuiPrivateSwitchBase-root-2180 MuiRadio-root-2175 radio MuiRadio-colorSecondary-2179 sc-hzDkRC iXLrck"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-2189"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-2193"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-2183"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="label-text-2"
          />
        </span>
        <span
          className="MuiTouchRipple-root-2238"
        />
      </span>
      <span
        className="MuiTypography-root-2202 MuiTypography-body2-2210 MuiFormControlLabel-label-2174 label"
      >
        LABEL TEXT
      </span>
    </label>
    <label
      className="MuiFormControlLabel-root-2169 sc-bRBYWo jzEXkX"
      disableRipple={false}
    >
      <span
        className="MuiButtonBase-root-2190 MuiIconButton-root-2184 MuiPrivateSwitchBase-root-2180 MuiRadio-root-2175 radio MuiRadio-colorSecondary-2179 sc-hzDkRC iXLrck"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-2189"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-2193"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-2183"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="label-text-3"
          />
        </span>
        <span
          className="MuiTouchRipple-root-2238"
        />
      </span>
      <span
        className="MuiTypography-root-2202 MuiTypography-body2-2210 MuiFormControlLabel-label-2174 label"
      >
        LABEL TEXT
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Radio|RadioButtonGroup disabled 1`] = `
<div
  className="MuiFormControl-root-2245 form"
  labelPlacement="end"
>
  <div
    className="MuiFormGroup-root-2249 group"
    disabled={true}
    labelPlacement="end"
    role="radiogroup"
  >
    <label
      className="MuiFormControlLabel-root-2251 MuiFormControlLabel-disabled-2255 sc-bRBYWo jzEXkX"
    >
      <span
        className="MuiButtonBase-root-2272 MuiButtonBase-disabled-2273 MuiIconButton-root-2266 MuiIconButton-disabled-2270 MuiPrivateSwitchBase-root-2262 MuiRadio-root-2257 radio MuiRadio-colorSecondary-2261 MuiPrivateSwitchBase-disabled-2264 MuiRadio-disabled-2259 sc-hzDkRC iXLrck"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="MuiIconButton-label-2271"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-2275"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-2265"
            disabled={true}
            onChange={[Function]}
            type="radio"
            value="label-text-1"
          />
        </span>
      </span>
      <span
        className="MuiTypography-root-2284 MuiTypography-body2-2292 MuiFormControlLabel-label-2256 label MuiFormControlLabel-disabled-2255"
      >
        LABEL TEXT
      </span>
    </label>
    <label
      className="MuiFormControlLabel-root-2251 MuiFormControlLabel-disabled-2255 sc-bRBYWo jzEXkX"
    >
      <span
        className="MuiButtonBase-root-2272 MuiButtonBase-disabled-2273 MuiIconButton-root-2266 MuiIconButton-disabled-2270 MuiPrivateSwitchBase-root-2262 MuiRadio-root-2257 radio MuiRadio-colorSecondary-2261 MuiPrivateSwitchBase-disabled-2264 MuiRadio-disabled-2259 sc-hzDkRC iXLrck"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="MuiIconButton-label-2271"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-2275"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-2265"
            disabled={true}
            onChange={[Function]}
            type="radio"
            value="label-text-2"
          />
        </span>
      </span>
      <span
        className="MuiTypography-root-2284 MuiTypography-body2-2292 MuiFormControlLabel-label-2256 label MuiFormControlLabel-disabled-2255"
      >
        LABEL TEXT
      </span>
    </label>
    <label
      className="MuiFormControlLabel-root-2251 MuiFormControlLabel-disabled-2255 sc-bRBYWo jzEXkX"
    >
      <span
        className="MuiButtonBase-root-2272 MuiButtonBase-disabled-2273 MuiIconButton-root-2266 MuiIconButton-disabled-2270 MuiPrivateSwitchBase-root-2262 MuiRadio-root-2257 radio MuiRadio-colorSecondary-2261 MuiPrivateSwitchBase-disabled-2264 MuiRadio-disabled-2259 sc-hzDkRC iXLrck"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="MuiIconButton-label-2271"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-2275"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-2265"
            disabled={true}
            onChange={[Function]}
            type="radio"
            value="label-text-3"
          />
        </span>
      </span>
      <span
        className="MuiTypography-root-2284 MuiTypography-body2-2292 MuiFormControlLabel-label-2256 label MuiFormControlLabel-disabled-2255"
      >
        LABEL TEXT
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Tables|BaseTable default 1`] = `
<table
  className="MuiTable-root-2320 sc-jhAzac hfCzDe"
>
  <thead
    className="MuiTableHead-root-2321 sc-fMiknA bCuLTq"
  >
    <tr
      className="MuiTableRow-root-2322 MuiTableRow-head-2325 sc-eqIVtm heIEVP"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-head-2328 sc-dVhcbM ffUlyd"
        iscentered={0}
        scope="col"
      >
        Dessert
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-head-2328 sc-dVhcbM iTwllf"
        iscentered={1}
        scope="col"
      >
        Calories
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-head-2328 sc-dVhcbM iTwllf"
        iscentered={1}
        scope="col"
      >
        Fat (g)
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-head-2328 sc-dVhcbM iTwllf"
        iscentered={1}
        scope="col"
      >
        Carbs (g)
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-head-2328 sc-dVhcbM iTwllf"
        iscentered={1}
        scope="col"
      >
        Protein (g)
      </th>
    </tr>
  </thead>
  <tbody
    className="MuiTableBody-root-2339 sc-fBuWsC iJuLiQ"
    hovercolor="#F8F8F8"
  >
    <tr
      className="MuiTableRow-root-2322 sc-eqIVtm heIEVP"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM ffUlyd"
        iscentered={0}
      >
        Cupcake
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        305
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        4
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        67
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        4
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-2322 sc-eqIVtm heIEVP"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM ffUlyd"
        iscentered={0}
      >
        Eclair
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        262
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        16
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        24
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        6
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-2322 sc-eqIVtm heIEVP"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM ffUlyd"
        iscentered={0}
      >
        Gingerbread
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        356
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        16
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        49
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        4
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-2322 sc-eqIVtm heIEVP"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM ffUlyd"
        iscentered={0}
      >
        Ice Cream
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        207
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        11
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        24
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2327 MuiTableCell-body-2329 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        4
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Tables|BaseTable offset 1`] = `
<table
  className="MuiTable-root-2340 sc-jhAzac hfCzDe"
>
  <thead
    className="MuiTableHead-root-2341 sc-fMiknA bCuLTq"
  >
    <tr
      className="MuiTableRow-root-2342 MuiTableRow-head-2345 sc-eqIVtm heIEVP"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-head-2348 sc-dVhcbM ffUlyd"
        iscentered={0}
        scope="col"
      >
        
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-head-2348 sc-dVhcbM iTwllf"
        iscentered={1}
        scope="col"
      >
        column one
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-head-2348 sc-dVhcbM iTwllf"
        iscentered={1}
        scope="col"
      >
        column two
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-head-2348 sc-dVhcbM iTwllf"
        iscentered={1}
        scope="col"
      >
        column three
      </th>
    </tr>
  </thead>
  <tbody
    className="MuiTableBody-root-2359 sc-fBuWsC iJuLiQ"
    hovercolor="#F8F8F8"
  >
    <tr
      className="MuiTableRow-root-2342 sc-eqIVtm heIEVP"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM ffUlyd"
        iscentered={0}
      >
        row one
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        01-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        01-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        01-03
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-2342 sc-eqIVtm heIEVP"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM ffUlyd"
        iscentered={0}
      >
        row two
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        02-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        02-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        02-03
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-2342 sc-eqIVtm heIEVP"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM ffUlyd"
        iscentered={0}
      >
        row three
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        03-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        03-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        03-03
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-2342 sc-eqIVtm heIEVP"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM ffUlyd"
        iscentered={0}
      >
        row four
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        04-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        04-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        04-03
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-2342 sc-eqIVtm heIEVP"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM ffUlyd"
        iscentered={0}
      >
        row five
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        05-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        05-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2347 MuiTableCell-body-2349 sc-dVhcbM iTwllf"
        iscentered={1}
      >
        05-03
      </td>
    </tr>
  </tbody>
</table>
`;
